# pid-quantizacao-uniforme

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  README.md
img/: lenna.tiff
src/: DisplayImage.cpp  bmp.hpp  main.cpp  pid_utils.cpp  pid_utils.hpp  test.cpp
